Docker/proyectos/mi_Portfolio/deploy/kubernetes/namespace-miportfolio.yml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-miportfolio
  labels:
    name: namespace-miportfolio
