Docker/proyectos/mi_Portfolio/deploy/kubernetes/deploy-miportfolio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-miportfolio
  namespace: namespace-miportfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miportfolio
  template:
    metadata:
      labels:
        app: miportfolio
    spec:
      volumes:
        - name: logs
          hostPath:
            path: /root/logs
            type: DirectoryOrCreate
      containers:
        - name: miportfolio
          image: bmleon/miportfolio:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: logs
              mountPath: /home/belen/logs
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
